@@ -24,14 +24,17 @@ package io.crate.analyze;
 
 import io.crate.analyze.relations.AnalyzedRelation;
 import io.crate.analyze.relations.AnalyzedRelationVisitor;
-import io.crate.analyze.symbol.Field;
 import io.crate.exceptions.ColumnUnknownException;
-import io.crate.metadata.OutputName;
-import io.crate.metadata.Path;
+import io.crate.expression.symbol.Field;
+import io.crate.expression.symbol.InputColumn;
+import io.crate.expression.symbol.Symbol;
+import io.crate.metadata.ColumnIdent;
 import io.crate.metadata.table.Operation;
+import io.crate.profile.ProfilingContext;
 import io.crate.sql.tree.QualifiedName;
-import io.crate.types.DataTypes;
+import io.crate.types.ObjectType;
 
+import javax.annotation.Nullable;
 import java.util.Collections;
 import java.util.List;
 
@@ -39,10 +42,15 @@ public class ExplainAnalyzedStatement implements AnalyzedStatement, AnalyzedRela
 
     final AnalyzedStatement statement;
     private final List<Field> fields;
+    private final ProfilingContext context;
+    private final List<Symbol> outputs;
 
-    public ExplainAnalyzedStatement(String columnName, AnalyzedStatement statement) {
+    ExplainAnalyzedStatement(String columnName, AnalyzedStatement statement, ProfilingContext context) {
+        Field field = new Field(this, new ColumnIdent(columnName), new InputColumn(0, ObjectType.untyped()));
         this.statement = statement;
-        this.fields = Collections.singletonList(new Field(this, new OutputName(columnName), DataTypes.OBJECT));
+        this.fields = Collections.singletonList(field);
+        this.context = context;
+        this.outputs = List.of(field);
     }
 
     @Override
@@ -54,13 +62,18 @@ public class ExplainAnalyzedStatement implements AnalyzedStatement, AnalyzedRela
         return statement;
     }
 
+    @Nullable
+    public ProfilingContext context() {
+        return context;
+    }
+
     @Override
     public <C, R> R accept(AnalyzedRelationVisitor<C, R> visitor, C context) {
         return visitor.visitExplain(this, context);
     }
 
     @Override
-    public Field getField(Path path, Operation operation) throws UnsupportedOperationException, ColumnUnknownException {
+    public Field getField(ColumnIdent path, Operation operation) throws UnsupportedOperationException, ColumnUnknownException {
         throw new UnsupportedOperationException("getField is not supported");
     }
 
@@ -80,7 +93,56 @@ public class ExplainAnalyzedStatement implements AnalyzedStatement, AnalyzedRela
     }
 
     @Override
-    public void setQualifiedName(QualifiedName qualifiedName) {
-        throw new UnsupportedOperationException("method not supported");
+    public List<Symbol> outputs() {
+        return outputs;
+    }
+
+    @Override
+    public WhereClause where() {
+        return WhereClause.MATCH_ALL;
+    }
+
+    @Override
+    public List<Symbol> groupBy() {
+        return List.of();
+    }
+
+    @Nullable
+    @Override
+    public HavingClause having() {
+        return null;
+    }
+
+    @Nullable
+    @Override
+    public OrderBy orderBy() {
+        return null;
+    }
+
+    @Nullable
+    @Override
+    public Symbol limit() {
+        return null;
+    }
+
+    @Nullable
+    @Override
+    public Symbol offset() {
+        return null;
+    }
+
+    @Override
+    public boolean hasAggregates() {
+        return false;
+    }
+
+    @Override
+    public boolean isUnboundPlanningSupported() {
+        return true;
+    }
+
+    @Override
+    public boolean isDistinct() {
+        return false;
     }
 }
